--- a/GeekyTechies_blog/static/css/blog.css
+++ b/GeekyTechies_blog/static/css/blog.css
@@ -4,17 +4,32 @@ h1 a {
 }
 body {
     padding-left: 15px;
+    padding-right: 15px;
+    background: url(https://wallpapersite.com/images/wallpapers/blur-background-1600x900-spectrum-electromagnetic-4k-901.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 .page-header {
-    background-color: #ff9400;
+    background-color: #333;
     margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    margin-bottom: 10px;
+    padding: 20px 20px 60px 40px;
+    opacity: 0.8;
+    filter: alpha(opacity=50);
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
     font-size: 36pt;
     text-decoration: none;
+}
+.page-header p{
+  font-size: 16pt;
+  color: #ffffff;
+  opacity: 100;
+  filter: alpha(opacity=50);
 }
 
 .content {
@@ -37,20 +52,149 @@ h1, h2, h3, h4 {
     width: 100%;
 }
 
-.top-menu, .top-menu:hover, .top-menu:visited {
+.top-menu{
     color: #ffffff;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
 }
 
+
 .post {
     margin-bottom: 70px;
+    font-family: 'Courgette', cursive;
+    font-size: 25px;
+
 }
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
-.comment {
-    margin: 20px 0px 20px 20px;
+
+
+
+
+/* Header/Blog Title */
+.header h1 {
+    padding: 20px;
+    font-size: 95pt;
+    text-align: center;
+      margin-bottom: 0px;
+      text-decoration: none;
+      color: #FCA205;
+      font-family: 'Righteous', cursive;
+}
+
+
+/* Style the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {
+    float: left;
+    width: 125%;
+}
+
+/* Right column */
+.rightcolumn {
+    float: right;
+    width: 32%;
+    padding-left: 20px;
+}
+
+/* Fake image */
+.fakeimg1 {
+  background: url(https://i.imgur.com/GsBgOvt.jpg);
+    width: 100%;
+    padding: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+     background-color: #c1c1c1;
+     padding: 30px;
+     margin-top: 20px;
+     opacity: 0.8;
+     filter: alpha(opacity=50);
+}
+.card h2{
+  text-align: center;
+}
+.card p{
+  font-family: 'El Messiri', sans-serif;
+  font-size: 25px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Footer */
+.footer {
+    padding: 20px;
+    text-align: center;
+    background: #333;
+    margin-top: 20px;
+    opacity: 0.8;
+    filter: alpha(opacity=50);
+}
+.footer p{
+  color: #ffffff;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media (max-width: 800px) {
+    .leftcolumn, .rightcolumn {
+        width: 100%;
+        padding: 0;
+    }
+}
+
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media (max-width: 400px) {
+    .topnav a {
+        float: none;
+        width:100%;
+    }
+}
+
+.sidebar-box {
+  max-height: 600px;
+  position: relative;
+  overflow: hidden;
+}
+.sidebar-box .read-more {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  margin: 0; padding: 30px 0;
+
+  /* "transparent" only works here because == rgba(0,0,0,0) */
+  background-image: linear-gradient(to bottom, transparent, black);
 }
