--- a/GeekyTechies_blog/templates/blog/base.html
+++ b/GeekyTechies_blog/templates/blog/base.html
@@ -5,19 +5,43 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Bad+Script|Berkshire+Swash|Courgette|Fredericka+the+Great|Righteous|Sacramento|Satisfy|Tangerine:700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Bad+Script|Berkshire+Swash|Courgette|El+Messiri|Fredericka+the+Great|Righteous|Sacramento|Satisfy|Tangerine:700" rel="stylesheet">
     </head>
     <body>
     <div class="page-header">
       {% if user.is_authenticated %}
-    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-    <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-     <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+       <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
     {% else %}
            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
 {% endif %}
-        <h1><a href="/">Geeky Techies</a></h1>
+      </div>
+    <div class="header">
+  <h1>Geeky Techies</h1>
+
+</div>
+
+<div class="topnav">
+  <a class="top-menu"></a>
+  <a href="/" class="top-menu"><span class="glyphicon glyphicon-home"></span></a>
+    <a class="top-menu"></a>
+  {% if user.is_authenticated %}
+<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+<a class="top-menu"></a>
+<a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+<a class="top-menu"></a>
+
+{% endif %}
+</div>
+
+<div class="rightcolumn">
+    <div class="card">
+      <h2>GeekyTechies</h2>
+      <div class="fakeimg1" style="height:200px; width:400px;">Image</div>
+      <p style="text-align: center;">Vinayak Sharma</p>
     </div>
+  </div>
+
+
     <div class="content container">
         <div class="row">
             <div class="col-md-8">
@@ -26,5 +50,9 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+  <p>Copyright © 2018 GeekyTechies. All rights reserved</p>
+  <p>Designed By : Vinayak Shrama</p>
+</div>
 </body>
 </html>
