--- a/GeekyTechies_blog/templates/blog/post_detail.html
+++ b/GeekyTechies_blog/templates/blog/post_detail.html
@@ -13,7 +13,13 @@
      <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
      <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
 {% endif %}
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+        <div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h1>{{ post.title }}</h1>
+      <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+  </div>
+        </div>
     </div>
 {% endblock %}
