--- a/GeekyTechies_blog/templates/blog/base.html
+++ b/GeekyTechies_blog/templates/blog/base.html
@@ -36,7 +36,7 @@
 <div class="rightcolumn">
     <div class="card">
       <h2>GeekyTechies</h2>
-      <div class="fakeimg1" style="height:200px; width:400px;">Image</div>
+      <div class="fakeimg1" style="height:200px; width:400px;"></div>
       <p style="text-align: center;">Vinayak Sharma</p>
     </div>
   </div>
